--- a/mid_century_modern_blog/mid_century_modern_blog/css/style.css
+++ b/mid_century_modern_blog/mid_century_modern_blog/css/style.css
@@ -1,3 +1,10 @@
-/* remember that style sheets cascade, so whatever is on the bottom will override whats on top. Don't have multiple statements for the same element. Organization and hierarchy are key, start with larger elements and work your way down.
 
-Do they best you can with this, talk with each other and help each other. Most colors and fonts are provided for you. Use adobe color to find the other colors from the sample image.*/
+p{
+    background-color: #04ADBF;
+}
+
+nav{
+    color: #047f8c;
+    font-size: 16px;
+    font-weight: 600;
+}
